--- a/book.html
+++ b/book.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
+<html>
 <head>
+    <meta charset="UTF-8">
+    <title>{{ book.title }}</title>
     <script>
         // your custom JavaScript code here
         console.log('Got IT!')
     </script>
 </head>
+<body>
+    {{{ content }}}
+    <script>
+        // your custom JavaScript code here
+        console.log('Got IT!')
+    </script>
+</body>
+</html>
